--- a/app/src/main/res/layout/fragment_create_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_create_youtube_video.xml
@@ -18,7 +18,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#CDF9EC"
+        android:background="@color/color_white"
+        android:backgroundTint="#ECECEC"
         tools:context=".faith.backpackScreen.youtubeVideo.create.YoutubeVideoDetailFragment">
 
 
@@ -31,13 +32,14 @@
             android:layout_marginEnd="128dp"
             android:layout_marginBottom="64dp"
             android:background="@drawable/rv_background_youtubeview"
+            android:backgroundTint="#ECECEC"
             android:padding="8dp"
             android:scrollbarSize="16dp"
             android:scrollbarThumbVertical="@drawable/scrollbarthumb_circle_rv"
             android:scrollbarTrackVertical="@drawable/scrollbartrack_rectangle_rv"
             android:scrollbars="vertical"
             android:verticalScrollbarPosition="right"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +64,7 @@
             app:layout_constraintStart_toStartOf="@+id/rv_youtubeView"
             app:layout_constraintTop_toTopOf="parent"
             app:startIconDrawable="@drawable/ic_search"
-            app:startIconTint="@null">
+            app:startIconTint="#FF0000">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editText_search_video"
