feat: allow deleting a detail while creating an event

--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -106,11 +106,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/prullenbak"
+            android:background="@drawable/ic_trashcan"
             android:onClick="@{() -> backpackViewModel.setIsInEditMode()}"
             app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_end"
             app:layout_constraintTop_toTopOf="@+id/guide_rv_horizontal_2"
-            app:srcCompat="@drawable/prullenbak" />
+            app:srcCompat="@drawable/ic_trashcan" />
 
         <ImageButton
             android:id="@+id/btn_backpack_search"
