lay-out refactoring + test

--- a/app/src/main/res/drawable/gradient_player_video.xml
+++ b/app/src/main/res/drawable/gradient_player_video.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
     <gradient
         android:angle="0"
-        android:startColor="#176DC4"
-        android:centerColor="#B5C1FF"
+        android:startColor="#F21040"
         android:endColor="#FFFFFF"
         android:type="linear"/>
+<!--        android:centerColor="#B5C1FF"-->
+
 </shape>
