--- a/app/src/main/res/layout/fragment_create_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_create_youtube_video.xml
@@ -19,27 +19,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white"
-        android:backgroundTint="#ECECEC"
+        android:backgroundTint="#FF0000"
+        android:clipToPadding="false"
         tools:context=".faith.backpackScreen.youtubeVideo.create.YoutubeVideoDetailFragment">
 
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_btn_back_white_ytvideo" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_youtubeView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="128dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="128dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="64dp"
             android:layout_marginBottom="64dp"
             android:background="@drawable/rv_background_youtubeview"
-            android:backgroundTint="#ECECEC"
-            android:padding="8dp"
+            android:backgroundTint="#FF0000"
+            android:backgroundTintMode="add"
+            android:elevation="100dp"
+            android:outlineProvider="bounds"
+            android:padding="16dp"
             android:scrollbarSize="16dp"
-            android:scrollbarThumbVertical="@drawable/scrollbarthumb_circle_rv"
             android:scrollbarTrackVertical="@drawable/scrollbartrack_rectangle_rv"
             android:scrollbars="vertical"
             android:verticalScrollbarPosition="right"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +63,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_search_video"
             style="@style/faith_textInputLayout"
-            android:layout_width="0dp"
+            android:layout_width="400dp"
             android:layout_height="@dimen/event_textInput_height"
             android:layout_marginStart="64dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="64dp"
             android:background="@drawable/rv_background_youtubeview"
             android:hint="@string/search_youtube"
