--- a/app/src/main/res/drawable/ic_opslaan_wit.xml
+++ b/app/src/main/res/drawable/ic_opslaan_wit.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="55">
   <path
       android:pathData="M48.2999,47.0999H11C8.5999,47.0999 6.7,45.1999 6.7,42.7999V23.5C6.7,21.1 8.5999,19.2 11,19.2H48.2999C50.7,19.2 52.5999,21.1 52.5999,23.5V42.7999C52.5999,45.1999 50.7,47.0999 48.2999,47.0999Z"
-      android:fillColor="#95E8CD"/>
+      android:fillColor="#FFFF00"/>
   <path
       android:pathData="M38.9,13.2H49.2C54.2,13.2 58.2,17.1 58.2,21.8V44.5C58.2,49.2 54.1,53.0999 49.2,53.0999H10C5,53.0999 1,49.2 1,44.5V21.8C1,17.1 5.1,13.2 10,13.2H19.2"
       android:strokeLineJoin="round"
