--- a/app/src/main/res/layout/player_youtube_custom.xml
+++ b/app/src/main/res/layout/player_youtube_custom.xml
@@ -32,58 +32,32 @@
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/avatar"/>
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:alpha="0"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/imageView6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="#1A2E3F" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/gradient_blue_player"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:alpha="0.5"
+            android:alpha="0.3"
             android:background="@drawable/gradient_player_video"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="180dp"
-            android:alpha="0.7"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/play_pause_button"
-            android:src="#0000FF" />
 
         <ImageButton
             android:id="@+id/play_pause_button"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:background="@drawable/round_button"
-            android:backgroundTint="#0000FF"
+            android:backgroundTint="@color/color_white"
             android:src="@drawable/ic_play_arrow_white_24dp"
+            android:tint="#F21040"
             app:layout_constraintBottom_toBottomOf="@+id/img_thumbnail_player"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,15 +65,20 @@
 
         <TextView
             android:id="@+id/txt_title_player"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
-            android:layout_marginTop="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="64dp"
+            android:shadowColor="#CDF9EC"
+            android:shadowDx="1"
+            android:shadowDy="10"
+            android:shadowRadius="50"
+            android:singleLine="true"
             android:textColor="@color/color_white"
             android:textSize="40sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/play_pause_button" />
 
         <TextView
             android:id="@+id/txt_description_player"
@@ -115,35 +94,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_title_player" />
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:alpha="0.8"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_title_player"
-            app:layout_constraintEnd_toEndOf="@+id/txt_title_player"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txt_title_player"
-            android:src="#FFFF00" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="128dp"
-            app:layout_constraintBottom_toTopOf="@+id/txt_title_player"
-            app:layout_constraintEnd_toEndOf="@+id/txt_title_player"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/img_thumbnail_player"
-            android:src="#FF2BD1" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container_player_touch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/container_player_seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,16 +111,17 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:alpha="0.3"
+            android:src="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@color/black" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_pause_video"
             android:layout_width="125dp"
             android:layout_height="125dp"
+            android:layout_marginTop="64dp"
             android:backgroundTint="@android:color/transparent"
             android:tint="@color/color_white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -177,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:backgroundTint="@color/onBackground"
+            android:backgroundTint="@android:color/transparent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_btn_back_white_video" />
@@ -187,7 +145,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container_player_seekbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -199,15 +157,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="64dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="50dp"
-            android:progressBackgroundTint="#D6D127"
-            android:progressTint="#FFFFFF"
-            android:thumbTint="#FFFF00"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/video_current_time"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginStart="128dp"
+            android:layout_marginEnd="128dp"
+            android:progressBackgroundTint="#33FFFFFF"
+            android:progressTint="#F21040"
+            android:thumbTint="#F21040"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/video_current_time"
@@ -215,13 +172,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="4dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
             android:textColor="@color/color_white"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/player_youtube_seekbar"
-            app:layout_constraintEnd_toStartOf="@+id/txt_slash_player"
-            app:layout_constraintTop_toTopOf="@+id/player_youtube_seekbar" />
+            app:layout_constraintStart_toStartOf="@+id/player_youtube_seekbar"
+            app:layout_constraintTop_toBottomOf="@+id/player_youtube_seekbar" />
 
         <Chronometer
             android:id="@+id/video_current_time_chrono"
@@ -247,6 +204,7 @@
             android:textColor="@color/color_white"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/video_current_time"
             app:layout_constraintEnd_toStartOf="@+id/video_duration"
             app:layout_constraintTop_toTopOf="@+id/video_current_time" />
@@ -262,8 +220,9 @@
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/video_current_time"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/player_youtube_seekbar"
             app:layout_constraintTop_toTopOf="@+id/video_current_time" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
