refactoring, documentation + testing

--- a/app/src/main/res/layout/fragment_create_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_create_youtube_video.xml
@@ -31,6 +31,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             app:layout_constraintStart_toStartOf="parent"
+            android:onClick="@{() -> youtubeViewModel.goBackToBackpack()}"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_btn_back_white_ytvideo" />
 
