--- a/app/src/main/res/layout/player_youtube_custom.xml
+++ b/app/src/main/res/layout/player_youtube_custom.xml
@@ -100,7 +100,7 @@
         android:id="@+id/container_player_touch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/container_player_seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
