--- a/app/src/main/res/layout/activity_cinema.xml
+++ b/app/src/main/res/layout/activity_cinema.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".faith.backpackScreen.BackpackScreenActivity">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".faith.cinema.CinemaActivity">
 
     <fragment
-        android:id="@+id/backpack_fragment_container"
+        android:id="@+id/cinema_fragment_container"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        />
+        app:defaultNavHost="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
