Fragment_cinema_start ui+rv

--- a/app/src/main/res/layout/fragment_cinema_start.xml
+++ b/app/src/main/res/layout/fragment_cinema_start.xml
@@ -8,33 +8,68 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cinema_start_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/achtergrond_cinema">
 
-        <Button
-            android:id="@+id/btn_films"
-            style="@style/AppTheme"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:background="@android:color/transparent"
-            android:text="@string/mijn_filmpjes"
-            app:layout_constraintBottom_toBottomOf="@+id/rv_container"
-            app:layout_constraintEnd_toStartOf="@+id/guide_btns_vertical" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_cinema_details_search"
+            style="@style/faith_textInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/event_textInput_height"
+            android:hint="@string/wat_zoek_je"
+            app:hintEnabled="false"
+            app:layout_constraintBottom_toTopOf="@+id/guide_rv_container_horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/btn_cinema_chooseDate_start"
+            app:layout_constraintStart_toStartOf="@+id/guide_rv_container_vertical1"
+            app:startIconDrawable="@drawable/ic_search"
+            app:startIconTint="@null"
+            android:paddingEnd="16dp">
 
-        <Button
-            android:id="@+id/btn_bestanden"
-            style="@style/AppTheme"
-            android:layout_width="150dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/search_hint_cinema"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_cinema_chooseDate_end"
+            style="@style/faith_textbutton"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:background="@android:color/transparent"
-            android:text="@string/mijn_bestanden"
-            app:layout_constraintBottom_toBottomOf="@+id/rv_container"
-            app:layout_constraintStart_toStartOf="@+id/guide_btns_vertical" />
+            android:layout_marginBottom="25dp"
+            android:backgroundTint="@color/color_white"
+            android:text="Tot"
+            app:icon="@drawable/ic_kalender"
+            app:iconGravity="textStart"
+            app:iconSize="34dp"
+            app:layout_constraintBottom_toTopOf="@+id/guide_rv_container_horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/guide_rv_container_vertical2" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_cinema_chooseDate_start"
+            style="@style/faith_textbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginBottom="25dp"
+            android:backgroundTint="@color/color_white"
+            android:gravity="center"
+            android:text="Start"
+            app:icon="@drawable/ic_kalender"
+            app:iconGravity="textStart"
+            app:iconSize="34dp"
+            app:layout_constraintBottom_toTopOf="@+id/guide_rv_container_horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/btn_cinema_chooseDate_end" />
+
+
+
 
 
         <ImageButton
-            android:id="@+id/btn_backpack_draw_cancel"
+            android:id="@+id/btn_cinema_cancel"
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
             android:layout_marginStart="20dp"
@@ -54,6 +89,27 @@
             app:layout_constraintTop_toTopOf="@+id/guide_rv_container_horizontal"
             app:srcCompat="@drawable/cinema_film_container"
             tools:srcCompat="@drawable/cinema_film_container" />
+        <ImageButton
+            android:id="@+id/btn_films"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="@android:color/transparent"
+            android:text="@string/mijn_filmpjes"
+            app:layout_constraintBottom_toBottomOf="@+id/rv_container"
+            app:layout_constraintEnd_toStartOf="@+id/guide_btns_vertical"
+            android:src="@drawable/btn_cinema_mijn_filmpjes_achtergrond"/>
+
+        <ImageButton
+            android:id="@+id/btn_details"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_cinema_mijn_bestanden_achtergrond"
+            android:text="@string/mijn_filmpjes"
+            app:layout_constraintBottom_toBottomOf="@+id/rv_container"
+            app:layout_constraintStart_toEndOf="@+id/btn_films" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_btns_vertical"
@@ -90,12 +146,24 @@
             android:layout_marginStart="15dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/prullenbak"
+            android:contentDescription="@string/delete"
             app:layout_constraintBottom_toBottomOf="@+id/rv_container"
             app:layout_constraintStart_toStartOf="@+id/rv_container"
             app:srcCompat="@drawable/prullenbak" />
 
+        <ImageButton
+            android:id="@+id/btn_cinema_add"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/achtergrond_publiek"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rv_container"
+            app:srcCompat="@drawable/add_btn" />
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_cinema_view_films"
+            android:id="@+id/rv_cinema"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scrollbarSize="16dp"
@@ -121,10 +189,11 @@
             tools:srcCompat="@drawable/publiek_cinema" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/create_film"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
+            android:contentDescription="@string/create_film"
             app:layout_constraintBottom_toBottomOf="@+id/achtergrond_publiek"
             app:layout_constraintEnd_toEndOf="@+id/achtergrond_publiek"
             app:layout_constraintStart_toStartOf="@+id/achtergrond_publiek"
